# trans007

./: .bumpversion.cfg  LICENSE  README.rst  setup.cfg
.github/workflows/: release.yml
trans007/: __init__.py  google.py
